# ideaLauncher

./: .gitignore  CMakeLists.txt  README.md  appicon.rc  main.cpp
files_to_copy/: install_open_idea_lightedit.bat  uninstall_open_idea_lightedit.bat  update-hash.ps1
files_to_copy/app/: README.md
files_to_copy/data/: idea.properties  idea.vmoptions  launcher.yaml
